# raspberry-to-pc

./: .gitignore  README.md  cloud.py  example_cloud.py  pyproject.toml  save_cloud_when_event.py  save_local_when_event.py  setup_cloud.py
daq_connectivity/: __init__.py  cloud.py  daq_ethernet.py  daq_serial.py  daq_socket.py  detect_daq_ethernet.py
examples/: example_usb.py  example_usb_plot.py  example_usb_plot_move_with_frame.py  example_usb_plot_move_with_time.py
pc/: client_socket.py
rpi/: example_cloud.py  example_usb.py  example_usb_cont.py  server_socket.py
sketches/found_online/: detect_device_ethernet.py  ethernet_connection.py  usb_connection.py  usb_simple_ascii.py  usb_simple_binary.py
sketches/my_drafts/: example_ethernet.py
